# hemrs

./: .env  .gitlab-ci.yml  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose-test.yaml  docker-compose.yaml  tmp.sql
.github/workflows/: docker-publish-tagged.yml  docker-publish.yml
backend/: .env  Cargo.toml  Dockerfile  backend.http  backend.hurl  docker-compose.yaml  sqlite.db-shm  sqlite.db-wal
backend/migrations/: 20231119121334_create_table.sql  20240401183938_create_tables.sql  20240401184132_insert_dht11.sql  20240416200158_add_sensor.sql  20250314112625_add_devices_table.sql  20250314112749_add_sensors_table.sql  20250314113030_add_measurements_table.sql  20250523123923_devices_sensor_view.sql  20250727123833_devices_sensors_view_mat.sql
backend/src/: background_tasks.rs  create.rs  create_read.rs  delete.rs  devices.rs  dht11.rs  env_data.rs  handlers.rs  main.rs  measurements.rs  query.rs  read.rs  sensors.rs  temperature.rs  update.rs
backend/src/database/: create.rs  db_connection_pool.rs  delete.rs  insert.rs  mod.rs  query.rs  read.rs  update.rs
backend/src/handlers/: devices.rs  measurements.rs  mod.rs  sensors.rs
backend_go/: Dockerfile  docker-compose.yaml  go.mod  go.sum  handlers.go  main.go
collector/: Cargo.toml
collector/src/: main.rs
env_data/: Cargo.toml
env_data/src/: env_data.rs  lib.rs
frontend/: Dockerfile  deno.json  fresh.gen.ts  package-lock.json  package.json  svelte.config.js
frontend/routes/: data.tsx
frontend/src/routes/: +layout.svelte  +page.server.ts  +page.svelte
frontend/src/routes/devices/: +page.server.ts  +page.svelte
frontend/src/routes/devices/[device_id]/: +page.server.ts  +page.svelte
frontend/src/routes/devices/[device_id]/sensors/[sensor_id]/measurements/: +page.server.ts  +page.svelte
frontend/src/routes/measurements/: +page.server.ts  +page.svelte
frontend/src/routes/measurements/new/: +page.svelte
frontend/src/routes/sensors/: +page.server.ts  +page.svelte
load_test/: locustfile.py
migration/: Cargo.toml
migration/src/: main.rs
release/: backend-deployment.yaml  backend-service.yaml  configmap.yaml  deployment.yaml  env-configmap.yaml  hemrs-deployment.yaml  kustomization.yaml  service.yaml  service_loadbalancer.yaml
sensors/: Cargo.toml
sensors/src/: dht11.rs  lib.rs  measurement.rs  temperature.rs
