[package]
name = "backend"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.91"
axum = { version = "0.7.7", features = ["macros"] }
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio", "time", "chrono"] }
structopt = "0.3.26"
tokio = { version = "1.41.0", features = ["full"] }
sensors = { path="../sensors"}
tower = { version = "0.5.1", features = ["tracing", "load"] }
tower-http = { version = "0.6.1", features = ["trace", "full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json", "tracing"] }
metrics = "0.24.0"
metrics-exporter-prometheus = "0.16.0"
