[package]
name = "backend"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
axum = { version = "0.8.1", features = ["macros"] }
chrono = { version = "0.4.39", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio", "time", "chrono"] }
structopt = "0.3.26"
tokio = { version = "1.43.0", features = ["full"] }
tower = { version = "0.5.2", features = ["tracing", "load"] }
tower-http = { version = "0.6.2", features = ["trace", "full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json", "tracing"] }
metrics = "0.24.1"
metrics-exporter-prometheus = "0.16.2"
