[package]
name = "backend"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.3", features = ["macros"] }
chrono = { version = "0.4.40", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.4", features = ["postgres", "runtime-tokio", "time", "chrono"] }
structopt = "0.3.26"
tokio = { version = "1.44.2", features = ["full"] }
tower = { version = "0.5.2", features = ["tracing", "load"] }
tower-http = { version = "0.6.2", features = ["trace", "full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json", "tracing"] }
metrics = "0.24.1"
metrics-exporter-prometheus = "0.16.2"
