[package]
name = "migration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.26", features = ["json", "blocking"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
env_data = { path="../env_data" }
chrono = { version = "0.4.35", features = ["serde"] }
anyhow = "1.0.81"
rayon = "1.9.0"
