[package]
name = "sensors"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
chrono = { version = "0.4.39", features = ["serde"] }
sqlx = { version = "0.8.3", features = ["time", "chrono"] }
serde_json = "1.0.134"
